Testing with improved defaults

--- a/action.yml
+++ b/action.yml
@@ -19,5 +19,5 @@ runs:
   image: docker://pipelinecomponents/yamllint
   args:
     - yamllint
-    - '${{ inputs.options }}'
-    - '${{ inputs.directory }}'
+    - ${{ inputs.options }}
+    - ${{ inputs.directory }}
